--- a/BurningIdeas/frontend/index.html
+++ b/BurningIdeas/frontend/index.html
@@ -9,6 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+     <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
     <title>The Burn Lab</title>
   </head>
   <body>
